--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,6 @@
 <body>
     <div id="app"> <%- initialContent -%></div>
 
-    <script src="main.js"></script> <!-- Maybe an error here because "hello react does" -->
+    <script src="main.js"></script>
 </body>
 </html>
